<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- This is an ad unit ID for a test ad. Replace with your own banner ad unit id. -->
    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>

    <string name="app_name">Message Talk</string>
    <string name="loading">loading...</string>
    <string name="app_message_send">Send</string>
    <string name="app_message_list">List</string>
    <string name="app_message_setting">Setting</string>
    <string name="common_info_title">Content</string>
    <string name="common_ok">Ok</string>
    <string name="main_back_finish">Press the back key again to close the app.</string>
    <string name="alert_info_title">Notice</string>
    <string name="processing">Processing... Please wait.</string>
    <string name="networkerror">Network Connection Failed.</string>
    <string name="verification_code_subtext">Please input the verification code</string>
    <string name="verification_code">Verification Code</string>
    <string name="info_title">Notice</string>
    <string name="gender_choice_title">Gender Selection</string>
    <string name="gender_choice_message">Please choose your sex.</string>
    <string name="send">SEND</string>
    <string name="sendinput">Please enter a message.</string>
    <string name="sendresult">Send complete.</string>
    <string name="all">ALL</string>
    <string name="man">Man</string>
    <string name="woman">Woman</string>
    <string name="local">Local</string>
    <string name="world">World(+Local)</string>
    <string name="newmessagereceive">Accept new messages</string>
    <string name="default_notification_channel_id">SIMPLE_RANDOM_CHAT</string>
    <string name="default_received_message">Receive Message</string>
    <string name="alarm_title">Notification to Message Reception </string>
    <string name="alarm">Notification</string>
    <string name="atype_msg">Phone default + Pop-up notification</string>
    <string name="btype_msg">Phone (No sound,No vibration) + Pop-up notification</string>
    <string name="ctype_msg">Pop-up notification</string>
    <string name="dtype_msg">No notification</string>
    <string name="byconfirm_msg">Do not ask when delete or hide</string>
    <string name="replynewmessagehide_msg">Hide from the answered message list</string>
    <string name="lockpwd_msg">Screen lock</string>
    <string name="passwordsuccess">Success - Password setup success</string>
    <string name="passwordfail">Fail - Password do not match</string>
    <string name="empty_message">No reply message.</string>
    <string name="black_list_send">Black List</string>
    <string name="bye_send">Delete</string>
    <string name="hide">Hide</string>
    <string name="hide_message">Hide from message list</string>
    <string name="hide_message_desc">Hidden in the message list.\nWhen the other party sends you a reply, it will show up again in the list.</string>
    <string name="bye_message">Delete message</string>
    <string name="bye_message_desc">Deletes the message and no longer receives the message.\nData will not be recovered, so decide carefully</string>
    <string name="black_list_message">Black List Regist</string>
    <string name="black_list_message_desc">If you send us a spam or bullshit message, please report it.\nAfter the report, the message will be deleted.</string>


    <string name="label_sample">sample</string>
    <string name="label_aspect_ratio">Aspect ratio</string>
    <string name="label_dynamic">Dynamic</string>
    <string name="label_image_source">Image source</string>
    <string name="label_square">Square</string>
    <string name="label_max_cropped_image_size">Max cropped image size</string>
    <string name="label_compression_settings">Compression settings</string>
    <string name="label_ui">UI</string>
    <string name="label_width">Width</string>
    <string name="label_height">Height</string>
    <string name="label_resize_image_to_max_size">Resize image to max size</string>
    <string name="label_hide_bottom_ui_controls">Hide bottom UI controls</string>
    <string name="label_freestyle_crop">Freestyle crop</string>
    <string name="label_select_picture">Select Picture</string>
    <string name="label_cancel">Cancel</string>
    <string name="label_ok">OK</string>
    <string name="notification_image_saved">Image saved</string>
    <string name="notification_image_saved_click_to_preview">Image saved. Click to preview.</string>
    <string name="menu_download">Download</string>
    <string name="button_pick_amp_crop"><![CDATA[Pick & Crop]]></string>
    <string name="button_crop_random_image">Crop random image</string>
    <string name="description_cropped_image">Cropped image</string>
    <string name="format_crop_result_d_d">Crop Result (%1$dx%2$d)</string>
    <string name="format_quality_d">Quality: %d</string>
    <string name="format_d_d_px">%1$dx%2$d px</string>
    <string name="format_max_cropped_image_size">Max cropped image size cannot be less then %d</string>
    <string name="permission_title_rationale">Permission needed</string>
    <string name="permission_read_storage_rationale">Storage read permission is needed to pick files.</string>
    <string name="permission_write_storage_rationale">Storage write permission is needed to save the image.</string>
    <string name="toast_cannot_retrieve_selected_image">Cannot retrieve selected image</string>
    <string name="toast_cannot_retrieve_cropped_image">Cannot retrieve cropped image</string>
    <string name="toast_unexpected_error">Unexpected error</string>
    <string name="file_provider_authorities">com.yalantis.ucrop.provider</string>
    <string name="channel_name">ucrop_chanel</string>
    <string name="channel_description">ucrop result image</string>

</resources>